--- a/components/reviews.html
+++ b/components/reviews.html
@@ -14,7 +14,6 @@
         <a href="index.html">Home</a>
         <a href="map.html">Map</a>
         <a href="menu.html">Menu</a>
-        <a href="services.html">Services</a>
         <a href="shop.html">Shop</a>
         <a href="reviews.html">Reviews</a>
         <a href="specials.html">Specials</a>
@@ -25,7 +24,7 @@
     </header>
     <main>
       <section id="reviews">
-        <h1>Reviews</h1>
+        <h1>Order History </h1>
         <p>
           Here- users can leave reviews and rate the food vendors around SFSU.
         </p>
