--- a/components/signup.html
+++ b/components/signup.html
@@ -14,9 +14,9 @@
         <a href="index.html">Home</a>
         <a href="map.html">Map</a>
         <a href="menu.html">Menu</a>
-        <a href="services.html">Services</a>
         <a href="shop.html">Shop</a>
         <a href="reviews.html">Reviews</a>
+        <a href="specials.html">Specials</a>
       </nav>
       <div class="account-icon">
         <a href="login.html">&#128100;</a>
