Finished home page

--- a/components/shop.html
+++ b/components/shop.html
@@ -24,7 +24,7 @@
     </header>
     <main>
       <section id="shop">
-        <h1>Shop</h1>
+        <h1 class="headr">Shop</h1>
         <!-- Add shopping stuff to cart? -->
       </section>
     </main>
