completed menu pag and map page

--- a/components/map.html
+++ b/components/map.html
@@ -22,7 +22,7 @@
     <main>
         <section id="map">
             <h1>SFSU Map For Food Vendors </h1>
-            <!-- Include a map of SFSU food vendors  -->
+            <img src="images/map2.jpg" alt="A map of SFSU food vendors" />
         </section>
     </main>
     <footer>
