--- a/components/menu.html
+++ b/components/menu.html
@@ -24,7 +24,86 @@
     </header>
     <main>
         <section id="menu">
-            <h1>Menu</h1>
+            <div class="heading">
+            <h1 class ="restaurant-title">The halal shop Menu </h1>
+
+
+            <div class="restaurant-selector">
+                <label for="restaurant-select">Select a restaurant:</label>
+                <select id="restaurant-select" onchange="location = this.value;">
+                    <option value="menu.html">The halal shop</option>
+                    <option value="menu2.html">Quickly</option>
+                    <option value="menu3.html">Gold coast grill</option>
+                    <option value="menu3.html">Nizario's pizza</option>
+                    <option value="menu3.html">Subway</option>
+                    <option value="menu3.html">Taza</option>
+
+                </select>
+            </div>
+            </div>
+            <br>            
+            <div class="grid-col-3">
+            <div class="menu-item">
+                <img src="images/chickentikkaoverrice-.jpg" alt="chickentikkaoverrice-">
+                <h2>chickentikkaoverrice</h2>
+                <p> marinated chcken with tikka gravy over rice with spicy sauce on top and tahini.</p>
+                <p> Price : $11.75</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="menu-item">
+                <img src="images/chickengyro.jpg" alt="Food Item 2">
+                <h2>chickengyro</h2>
+                <p> marinated greek style chicken wrapped in pita bread with spicy sauce and lettuce .</p>
+                <p> Price : $10</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="menu-item">
+                <img src="images/lambgyro.jpg" alt="Food Item 3">
+                <h2>lambgyro</h2>
+                <p>marinated greek style lamb wrapped in pita bread with spicy sauce and lettuce .</p>
+                <p> Price : $12.25</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="menu-item">
+                <img src="images/lambtikkaoverrice.jpg" alt="Food Item 4">
+                <h2>lambtikkaoverrice</h2>
+                <p>marinated lamb with tikka gravy over rice with spicy sauce on top and mayo.</p>
+                <p> Price : $14$</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="menu-item">
+                <img src="images/falafelgyro.jpg" alt="Food Item 5">
+                <h2>falafelgyro</h2>
+                <p> vegetarian falafal wrapped in pita bread with spicy sauce and lettuce </p>
+                <p> Price : $11</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="menu-item">
+                <img src="images/falafeltikkaoverrice.jpg" alt="Food Item 6">
+                <h2>falafeltikkaoverrice</h2>
+                <p> falafal with tikka gravy over rice with spicy sauce on top and tahini.</p>
+                <p> Price : $12</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="menu-item">
+                <img src="images/PEPSI.jpeg" alt="Food Item 7">
+                <h2>PEPSI</h2>
+                <p> Price : $2</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="menu-item">
+                <img src="images/7-UP.jpeg" alt="Food Item 8"> 
+                <h2>7-UP</h2>
+                <p> Price : 2$</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="menu-item">
+                <img src="images/Aquafina.jpeg" alt="Food Item 9">
+                <h2>Aquafina</h2>
+                <p> Price : 2$</p>
+                <button>Add to Cart</button>
+            </div>
+            </div>
             <!-- Need to include menu's from vendors -->
         </section>
     </main>
