--- a/styling/styles.css
+++ b/styling/styles.css
@@ -213,6 +213,84 @@ section#signup p a:hover {
     /* SFSU gold */
     padding: 1rem;
     border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    
+    justify-content: space-between;
+    border-style: solid black;
+
+}
+
+.grid-col-3 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+        justify-content: space-between;
+}
+
+
+/* Restaurant Selector */
+.restaurant-selector {
+    position: relative;
+    left:80%;
+    padding: 2px;
+    border-radius: 2px;
+    }
+    
+    .restaurant-selector label {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-right: 10px;
+    }
+    
+
+.menu-item {
+    width: calc(25% - 20px);
+    margin-bottom: 20px;
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    padding: 30px;
+    text-align: center;
+
+}
+
+#menu h1 {
+    position: relative;
+    text-align: center;
+    margin: 12;
+    
+}
+.heading {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.menu-item img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+    border-style: solid black;
+}
+.menu-item h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+.menu-item p {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+.menu-item button {
+    background-color: #e67e22;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+.menu-item button:hover {
+    background-color: #d35400;
 }
 
 /* Services page */
@@ -222,7 +300,6 @@ section#signup p a:hover {
     padding: 1rem;
     border-radius: 5px;
 }
-
 /* Shop page */
 #shop {
     background-color: #f9eb11;
