Finished home page

--- a/components/index.html
+++ b/components/index.html
@@ -26,8 +26,8 @@
       <section id="home">
         <h1>Gator Food Court</h1>
         <p class="par">
-          Welcome to the Gator Food Court! Browse through food
-          options, check out menus, and discover services offered by food
+          Welcome to the Gator Food Court! Browse through delicious food
+          options, acheck out menus, and discover services offered by food
           vendors around SFSU.
         </p>
       </section>
