--- a/components/specials.html
+++ b/components/specials.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,26 +25,54 @@
     </header>
     <main>
       <section id="specials">
-        <h1>Specials</h1>
+        <h1>SPECIALS</h1>
         <div class="specials-container">
-          <h2>This week's special</h2>
+          <h2>THIS WEEK'S SPECIAL</h2>
           <div class="specials-row">
-            <!-- figure out what imagines I want to put in here for specials -->
-            <img src="" alt="food" />
-            <p>first special deal</p>
+            <div class="image-container">
+              <img src="images/COKE.jpg" />
+              <p>GET A FREE COKE WITH PURCHASE OF ORDER ABOVE $10</p>
+              <p class="image-name">THE HALAL SHOP</p>
+            </div>
+            <div class="image-container">
+              <img src="images/goldocast.jpg" />
+              <p>VEG LASAGNA FOR 13.99$ </p>
+              <p class="image-name">GOLD COAST GRILL</p>
+            </div>
+            <div class="image-container">
+              <img src="images/subway.jpeg" />
+              <p>BUY ONE GET ONE FOOTLONG FREE</p>
+              <p class="image-name">SUBWAY</p>
+            </div>
+            <div class="image-container">
+              <img src="images/nizzariospizza.jpeg" />
+              <p>GET A SMALL PIZZA JUST FOR 6.99$!</p>
+              <p class="image-name">NIZZARIOS PIZZA</p>
+            </div>
+            <div class="image-container">
+              <img src="images/quickly.jpg" />
+              <p>BUY ONE BOBA GET ONE BOBA 50% OFF</p>
+              <p class="image-name">QUICKLY</p>
+            </div>
+           
+            <div class="image-container">
+              <img src="images/cafe101.jpg" />
+              <p>GET 20% OFF ON ALL BREAKFAST MENU ITEMS</p>
+              <p class="image-name">CAFE 101</p>
+            </div>
           </div>
-          <h2>Associated deals</h2>
+          <h2>ASSOCIATED DEALS</h2>
           <div class="specials-row">
-            <!-- same concept as above but for the associated deals -->
-            <img src="" alt="food" />
-            <p>first special deal</p>
+            <div class="image-container">
+              <img src="images/HALAL SHOP.jpeg" />
+              <p>EMPLOYEE DEAL! GET A MEAL FOR $5 IF YOU WORK ONCAMPUS</p>
+              <p class="image-name">THE HALAL SHOP</p>
+            </div>
+            <div class="image-container">
+              <img src="images/SUBWAYOFF.jpg" />
+              <p>STUDENTS GRADUTING THIS SEMESTER, GET SUB FOR ONLY $3</p>
+              <p class="image-name">SUBWAY</p>
+            </div>
           </div>
         </div>
-      </section>
-    </main>
-    <footer>
-      <p>&copy; 2023 Gator Food Court. All rights reserved.</p>
-    </footer>
-    <script src="script.js"></script>
-  </body>
-</html>
+        
