Finished home page

--- a/components/index.html
+++ b/components/index.html
@@ -31,6 +31,50 @@
           vendors around SFSU.
         </p>
       </section>
+      <div class="album-container">
+        <h2 class="headr">Popular Restaurants</h1>
+        <div class="gallery">
+          <a target="_blank">
+            <img src="https://img.cdn4dd.com/cdn-cgi/image/fit=contain,width=1200,height=672,format=auto/https://doordash-static.s3.amazonaws.com/media/restaurant/cover/nizarios.jpg" alt="Cinque Terre" width="600" height="400" />
+          </a>
+          <div class="author">Nizario's Pizza</div>
+        </div>
+
+        <div class="gallery">
+          <a target="_blank">
+            <img src="./images/halal.png" alt="Forest" width="600" height="400" />
+          </a>
+          <div class="author">Halal Gyro & Shawarma</div>
+        </div>
+
+        <div class="gallery">
+          <a target="_blank">
+            <img src="https://loyalty360.org/getattachment/35b9070c-8589-4dcb-bff2-e99fddbc49d1/image" alt="Cinque Terre" width="600" height="400" />
+          </a>
+          <div class="author">Subway</div>
+        </div>
+
+        <div class="gallery">
+          <a target="_blank">
+            <img src="https://menufyproduction.imgix.net/636689196232054989+56398.png?auto=compress,format&h=1080&w=1920&fit=max" alt="Cinque Terre" width="600" height="400" />
+          </a>
+          <div class="author">Quickly</div>
+        </div>
+
+        <div class="gallery">
+          <a target="_blank">
+            <img src="./images/gold.png"width="600" height="400" />
+          </a>
+          <div class="author">Gold Coast Grill</div>
+        </div>
+
+        <div class="gallery">
+          <a target="_blank">
+            <img src="./images/cafe101.png" width="600" height="400" />
+          </a>
+          <div class="author">Cafe 101</div>
+        </div>
+      </div>
     </main>
     <footer>
       <p>&copy; 2023 Gator Food Court. All rights reserved.</p>
