--- a/styling/styles.css
+++ b/styling/styles.css
@@ -515,3 +515,64 @@ section#signup p a:hover {
   text-align: center;
   text-transform: uppercase;
 }
+
+/* Section for Hayat*/
+.headr {
+  margin: 0 auto;
+  font-size: 1.5rem;
+}
+
+.par {
+  margin: 0 auto;
+}
+.album-container {
+  width: 900px;
+  height: 520px;
+  overflow: hidden;
+  background-color: var(--lightgray);
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+  border: 1px solid ccc;
+  border-radius: 0px;
+  margin: 0 auto;
+  box-shadow: 0px 0px 6px 6px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  align-items: center;
+}
+
+.gallery {
+  margin: 15px 45px 45px 90px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 150px;
+  height: 180px;
+  text-align: center;
+  text-decoration: none;
+  color: #000;
+}
+
+.gallery:hover {
+  border: 1px solid #777;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
+}
+
+.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+.desc {
+  padding: 3px;
+  text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: .8rem;
+}
+
+.author {
+  padding: 3px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1rem;
+  margin-top: 15px;
+}
