--- a/components/index.html
+++ b/components/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
       <section id="home">
-        <h1>Gator Food Court</h1>
+        <h1 class="headr">Gator Food Court</h1>
         <p>
           Welcome to the Gator Food Court application! Browse through food
           options, check out menus, and discover services offered by food
