--- a/components/index.html
+++ b/components/index.html
@@ -35,28 +35,28 @@
         <h2 class="headr">Popular Restaurants</h1>
         <div class="gallery">
           <a target="_blank">
-            <img src="https://img.cdn4dd.com/cdn-cgi/image/fit=contain,width=1200,height=672,format=auto/https://doordash-static.s3.amazonaws.com/media/restaurant/cover/nizarios.jpg" alt="Cinque Terre" width="600" height="400" />
+            <img src="./images/nizarios.avif" width="600" height="400" />
           </a>
           <div class="author">Nizario's Pizza</div>
         </div>
 
         <div class="gallery">
           <a target="_blank">
-            <img src="./images/halal.png" alt="Forest" width="600" height="400" />
+            <img src="./images/halal.png" width="600" height="400" />
           </a>
           <div class="author">Halal Gyro & Shawarma</div>
         </div>
 
         <div class="gallery">
           <a target="_blank">
-            <img src="https://loyalty360.org/getattachment/35b9070c-8589-4dcb-bff2-e99fddbc49d1/image" alt="Cinque Terre" width="600" height="400" />
+            <img src="./images/subway600.jpeg" width="600" height="400" />
           </a>
           <div class="author">Subway</div>
         </div>
 
         <div class="gallery">
           <a target="_blank">
-            <img src="https://menufyproduction.imgix.net/636689196232054989+56398.png?auto=compress,format&h=1080&w=1920&fit=max" alt="Cinque Terre" width="600" height="400" />
+            <img src="./images/quicklyy.avif" width="600" height="400" />
           </a>
           <div class="author">Quickly</div>
         </div>
